# hr-workforce-analytics-platform

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
Analytics/PowerBI/: HR Analytics Dashboard Power BI.pbix
Architecture/: DataArchitecture.md  HLD.md  LLD.md  SystemArchitecture
Business/: BRD.md  Insights_and_Recommendations.md  TRD.md
Data/processed/: .gitkeep
Data/raw/: .gitkeep
ETL/: __init__.py
ETL/Python/: __init__.py  data_cleaning.py  run_sql_pipeline.py
ETL/Python/utils/: __init__.py  config.py
ETL/SQL/: attrition_deep_dive.sql  department_analysis.sql  kpi_queries.sql  load.sql  schema.sql  views.sql
Testing/: kpi_reconciliation.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_config.py  test_data_cleaning.py  test_sql_pipeline.py
